Updated icon, latest dependencies, refactoring

--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = lanelexicon
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.muslimtechnet.laneLexicon
+PRODUCT_BUNDLE_IDENTIFIER = com.muslimtechnet.lanelexicon
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.muslimtechnet. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.muslimtechnet. All rights reserved.
