--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 2.4.1+18
+version: 2.4.2+19
 
 environment:
   sdk: ">=2.16.0 <4.0.0"
@@ -22,7 +22,7 @@ dependencies:
   shared_preferences: ^2.2.2
   share_plus: ^7.2.1
   get_it: ^7.6.4
-  in_app_review: ^2.0.8
+  # in_app_review: ^2.0.8
   flutter_colorpicker: ^1.0.3
   sqflite_common_ffi: ^2.3.0+2
   html: ^0.15.4
